--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -39,6 +39,15 @@
                 </div>
                 <!-- empty cols -->
                 <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="https://github.com/exercism/exercism.io/pulls?utf8=%E2%9C%93&q=is%3Apr%20is%3Amerged%20author%3Aaklap%20" class="portfolio-link" data-toggle="modal" target="_blank">
+                        <div class="portfolio-hover">
+                                <div class="portfolio-hover-content">
+                                </div>
+                        </div>
+                        <img src="img/portfolio/exercism.png" class="img-responsive" >
+                    </a>
+                    <div class="portfolio-caption">
+                    <h4>Exercism</h4>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
                 </div>
