--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -6,7 +6,7 @@
         
         <p>I'm <span>Alexis</span>, a web developer from & based in <span>{{":statue_of_liberty:" | emojify}}</span><br><br>Refactoring, exploring code bases, & sharing knowledge are my favorite things!</p>
         
-        <p><a href='/blog' target="_blank">Read my writing {{ ":writing_hand:" | emojify }}</a> | | <a href='https://github.com/aklap' target="_blank">Read my code {{ ":computer:" | emojify }}</a></p>
+        <p><a href='https://cohost.org/alexislp' target="_blank">Read my writing {{ ":writing_hand:" | emojify }}</a> | | <a href='https://github.com/aklap' target="_blank">Read my code {{ ":computer:" | emojify }}</a></p>
 
         <p><a href='#contact'>{{":point_right:" | emojify }}I'm currently looking for a new opportunities: Get in touch!{{":point_left:" | emojify }}</a></p>
     </section>
