--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -6,7 +6,7 @@
     <div class="navbar-header page-scroll">
       <a class="navbar-brand page-scroll" href="/"><p>Alexis La Porte</p></a>
     </div>
-  </div> <!-- /.container-fluid -->x
+  </div> <!-- /.container-fluid -->
 </nav>
 
 <nav>
