--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -10,7 +10,8 @@
         <div class="row text-center">
             <div class="col-lg-12">
                 <ul class="list-inline social-buttons">
-                    <a class="social-media" href="mailto:alexis@alexislaporte.com" >
+                    <a class="social-media"
+                    href="mailto:aklaporte@gmail.com">
                             <p><i class="fa fa-envelope-o fa-2x"></i></p>Email</a>
 
                     <a class="social-media" href="https://github.com/aklap">
