--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,7 +1,6 @@
 <title>Alexis La Porte: Web Developer</title>
 
-<link rel="shortcut icon" type="image/x-icon"
-href="/favicons/computer_love.ico">
+<link rel="shortcut icon" type="image/x-icon"href="/favicons/computer_love.ico">
 <!-- Custom fonts -->
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Droid+Serif:400,700,400italic,700italic|Roboto+Slab:400,100,300,700|Raleway:300" rel='stylesheet' type='text/css'>
 
