--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <meta property="og:type" content="website"/>
-<meta property="og:url" content="http://alexis.computer"/>
+<meta property="og:url" content="http://alexislaporte.com"/>
 <meta property="og:title" content="Alexis La Porte"/>
 <meta property="og:description" content="I'm a New York based developer with a passion for programming."/>
 <meta property="og:image" content="#"/>
