Update social media icons

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -10,15 +10,24 @@
         <div class="row text-center">
             <div class="col-lg-12">
                 <ul class="list-inline social-buttons">
+                    <!-- email -->
                     <a class="social-media"
                     href="mailto:aklaporte@gmail.com">
-                            <p><i class="fa fa-envelope-o fa-2x"></i></p>Email</a>
-
+                            <p><i class="fa fa-envelope
+                               fa-3x"></i></p></a>
+                   <!-- github -->
                     <a class="social-media" href="https://github.com/aklap">
-                            <p><i class="fa fa-github fa-2x"></i></p>GitHub</a>
-
+                            <p><i class="fab
+                               fa-github fa-3x"></i></p></a>
+                    <!-- linkedin -->
                     <a class="social-media" href="https://linkedin.com/in/alexislaporte">
-                        <p><i class="fa fa-linkedin fa-2x"></i></p>LinkedIn</a>
+                        <p><i class="fab fa-linkedin
+                           fa-3x"></i></p></a>
+                    <!-- mastodon -->
+                    <a class="social-media"
+                    href="https://techhub.social/@alexislp">
+                        <p><i class="fab
+                           fa-mastodon fa-3x"></i></i></p></a>
                 </ul>
             </div>
         </div>
