--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -8,8 +8,8 @@
         
         <p><a href='https://cohost.org/alexislp' target="_blank">Read my writing {{ ":writing_hand:" | emojify }}</a> | | <a href='https://github.com/aklap' target="_blank">Read my code {{ ":computer:" | emojify }}</a></p>
 
-        <p><a href='#contact'>{{":point_right:" | emojify }} I'm currently looking for a new
-        opportunities {{":point_left:" | emojify }}<br>Get in
+        <p><a href='#contact'>{{":point_right:" | emojify }} I'm
+           currently looking for new opportunities {{":point_left:" | emojify }}<br>Get in
     touch!</a></p>
     </section>
 </header>
