--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,10 +1,15 @@
-<link rel="stylesheet" type="text/css" href="/css/navbar.css">
+<link rel="stylesheet" type="text/css" href="/css/style.css">
 
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header page-scroll">
-      <a class="navbar-brand page-scroll" href="/"><p>Alexis La Porte</p></a>
-    </div>
-  </div> <!-- /.container-fluid -->
-</nav>
+<header>
+  <nav>
+    <a class="logo" href="/">
+      <h1 id="mobile-logo">Alexis L.</h1>
+      <h1 id="desktop-logo">Alexis La Porte</h1>
+    </a>
+    <ul class="menu">
+      <li class="menu-link"><a href="#about">About</a></li>
+      <li class="menu-link"><a href="#portfolio">Portfolio</a></li>
+      <li class="menu-link"><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+</header>
