--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -1,35 +1,36 @@
-<link rel="stylesheet" type="text/css" href="css/contact.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 
+<!-- CONTACT SECTION -->
 <section id="contact">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Get in Touch</h2>
-            </div>
-        </div>
-        <div class="row text-center">
-            <div class="col-lg-12">
-                <ul class="list-inline social-buttons">
-                    <!-- email -->
-                    <a class="social-media"
-                    href="mailto:aklaporte@gmail.com">
-                            <p><i class="fa fa-envelope
-                               fa-3x"></i></p></a>
-                   <!-- github -->
-                    <a class="social-media" href="https://github.com/aklap">
-                            <p><i class="fab
-                               fa-github fa-3x"></i></p></a>
-                    <!-- linkedin -->
-                    <a class="social-media" href="https://linkedin.com/in/alexislaporte">
-                        <p><i class="fab fa-linkedin
-                           fa-3x"></i></p></a>
-                    <!-- mastodon -->
-                    <a class="social-media"
-                    href="https://techhub.social/@alexislp">
-                        <p><i class="fab
-                           fa-mastodon fa-3x"></i></i></p></a>
-                </ul>
-            </div>
-        </div>
-    </div>
+  <h2 class="section-heading">Contact Me</h2>
+  <div class="social-media-links">
+    <!-- Email -->
+    <a class="social-media-link" href="mailto:aklaporte@gmail.com" title="E-mail">
+      <div>
+        <i class="fas fa-envelope fa-2x"></i>
+        <span>Email</span>
+      </div>
+    </a>
+    <!-- GitHub -->
+    <a class="social-media-link" href="https://github.com/aklap" title="GitHub">
+      <div>
+        <i class="fab fa-github fa-2x"></i>
+        <span>GitHub</span>
+      </div>
+    </a>
+    <!-- LinkedIn -->
+    <a class="social-media-link" href="https://linkedin.com/in/alexislaporte" title="LinkedIn">
+      <div>
+        <i class="fab fa-linkedin fa-2x"></i>
+        <span>LinkedIn</span>
+      </div>
+    </a>
+    <!-- Mastodon -->
+    <a class="social-media-link" href="https://techhub.social/@alexislp" title="Mastodon">
+      <div>
+        <i class="fab fa-mastodon fa-2x"></i>
+        <span>Mastodon</span>
+      </div>
+    </a>
+  </div>
 </section>
