--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,15 +1,8 @@
 
-<link rel="stylesheet" type="text/css" href="/css/footer.css">
+<link rel="stylesheet" type="text/css" href="/css/style.css">
 
 <footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <div id="footer-info" class="inner">
-                    &copy; {{ now.Format "2006"}} {{ or .Site.Params.Author }} - All Rights Reserved. &nbsp;
-                    <p id="attribution-info">Powered by <a href="https://gohugo.io" target="_blank">Hugo</a></p>
-                </div>
-            </div>
-        </div>
-    </div>
+  <p>Copyright Alexis&copy; {{ now.Format "2006"}} {{ or .Site.Params.Author }} - All Rights Reserved. &nbsp;
+    <p id="attribution-info">Powered by <a href="https://gohugo.io" target="_blank">Hugo</a></p>
+</div>
 </footer>
