--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -1,60 +1,41 @@
-<link rel="stylesheet" type="text/css" href="css/portfolio.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 
-<section id="portfolio" class="bg-light-gray">
-    <div class="container">
-        <!-- heading -->
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Projects</h2>
-            </div>
-        </div>
-        <!-- Patchcord -->
-        <div class="row">
-            <div class="col-md-4 col-sm-6 portfolio-item">
-                <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                    <div class="portfolio-hover">
-                        <div class="portfolio-hover-content">
-                        </div>
-                    </div>
-                    <img src="img/portfolio/PatchCord-preview.png" class="img-responsive" alt="PatchCord web app">
-                </a>
-                <div class="portfolio-caption">
-                    <h4>PatchCord</h4>
-                    <p class="text-muted">Rails web app</p>
-                </div>
-            </div>
-            <!-- matt-soloflow -->
-            <div class="col-md-4 col-sm-6 portfolio-item">
-                <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-                    <div class="portfolio-hover">
-                        <div class="portfolio-hover-content">
-                        </div>
-                    </div>
-                    <img src="img/portfolio/MattSoloFlow-preview.png" class="img-responsive" alt="MattSoloFlow web app">
-                </a>
-                <div class="portfolio-caption">
-                    <h4>Matt Soloflow</h4>
-                    <p class="text-muted">A Rails web app</p>
-                </div>
-            </div>
-            <!-- empty cols -->
-            <div class="col-md-4 col-sm-6 portfolio-item">
-                <a href="https://github.com/exercism/exercism.io/pulls?utf8=%E2%9C%93&q=is%3Apr%20is%3Amerged%20author%3Aaklap%20" class="portfolio-link" data-toggle="modal" target="_blank">
-                    <div class="portfolio-hover">
-                        <div class="portfolio-hover-content">
-                        </div>
-                    </div>
-                    <img src="img/portfolio/exercism.png" class="img-responsive" >
-                </a>
-                <div class="portfolio-caption">
-                    <h4>Exercism</h4>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Portfolio Modals -->
+<!-- PORTFOLIO -->
+<section id="portfolio">
+  <h2>Portfolio</h2>
+  <div class="portfolio-links">
+    <div class="portfolio-project">
+      <a class="portfolio-link" href="https://github.com/exercism/exercism.io/pulls?utf8=%E2%9C%93&q=is%3Apr%20is%3Amerged%20author%3Aaklap%20">
+        <figure>
+          <img src="img/portfolio/exercism.png" class="" alt="">
+          <figcap>
+            <span class="project-title">Exercism</span>
+            <span class="project-description">Open source Ruby project</span>
+          </figcap>
+        </figure>
+      </a>
+    </div>
+    <div class="portfolio-project">
+      <a href="#" class="portfolio-link">
+        <figure>
+          <img src="img/portfolio/patchcord-preview.png" alt="">
+          <figcap>
+            <span class="project-title">PatchCord</span> 
+            <span class="project-description">Rails web app</span>
+          </figcap>
+        </figure>
+      </a>
+    </div>
+    <div class="portfolio-project">
+      <a href="#" class="portfolio-link">
+        <figure>
+          <img src="img/portfolio/soloflow-preview.png" class="" alt="">
+          <figcap>
+            <span class="project-title">Matt Soloflow</span> 
+            <span class="project-description">A Rails web app</span>
+          </figcap>
+        </figure>
+      </a>
+    </div>
+  </div>
+</section>
