--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -1,6 +1,7 @@
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta property="og:type" content="website"/>
-<meta property="og:url" content="http://alexislaporte.com"/>
-<meta property="og:title" content="Alexis La Porte"/>
+<meta property="og:url" content="alexis.computer"/>
+<meta property="og:title" content="Alexis La Porte: Software Developer"/>
 <meta property="og:description" content="I'm a New York based developer with a passion for programming."/>
 <meta property="og:image" content="#"/>
