--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -7,7 +7,7 @@
     <div class="portfolio-project">
       <a class="portfolio-link" href="https://github.com/exercism/exercism.io/pulls?utf8=%E2%9C%93&q=is%3Apr%20is%3Amerged%20author%3Aaklap%20">
         <figure>
-          <img src="img/portfolio/exercism.png" class="" alt="">
+          <img src="img/portfolio/exercism.png" alt="">
           <figcap>
             <span class="project-title">Exercism</span>
             <span class="project-description">Open source Ruby project</span>
@@ -29,7 +29,7 @@
     <div class="portfolio-project">
       <a href="#" class="portfolio-link">
         <figure>
-          <img src="img/portfolio/soloflow-preview.png" class="" alt="">
+          <img src="img/portfolio/soloflow-preview.png" alt="">
           <figcap>
             <span class="project-title">Matt Soloflow</span> 
             <span class="project-description">A Rails web app</span>
