Add alt tags and links

--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -7,7 +7,7 @@
     <div class="portfolio-project">
       <a class="portfolio-link" href="https://github.com/exercism/exercism.io/pulls?utf8=%E2%9C%93&q=is%3Apr%20is%3Amerged%20author%3Aaklap%20">
         <figure>
-          <img src="img/portfolio/exercism.png" alt="">
+          <img src="img/portfolio/exercism.png" alt="Home page of the Exercism website.">
           <figcap>
             <span class="project-title">Exercism</span>
             <span class="project-description">Open source Ruby project</span>
@@ -16,9 +16,9 @@
       </a>
     </div>
     <div class="portfolio-project">
-      <a href="#" class="portfolio-link">
+      <a href="https://github.com/nyc-purple-martins-2015/patch_cord" class="portfolio-link">
         <figure>
-          <img src="img/portfolio/patchcord-preview.png" alt="">
+          <img src="img/portfolio/patchcord-preview.png" alt="Home page of the PatchCord rails web app">
           <figcap>
             <span class="project-title">PatchCord</span> 
             <span class="project-description">Rails web app</span>
@@ -27,11 +27,11 @@
       </a>
     </div>
     <div class="portfolio-project">
-      <a href="#" class="portfolio-link">
+      <a href="https://github.com/aklap/matt-soloflow" class="portfolio-link">
         <figure>
-          <img src="img/portfolio/soloflow-preview.png" alt="">
+          <img src="img/portfolio/soloflow-preview.png" alt="Home page of the Solofow, StackOverflow clone website">
           <figcap>
-            <span class="project-title">Matt Soloflow</span> 
+            <span class="project-title">Soloflow</span> 
             <span class="project-description">A Rails web app</span>
           </figcap>
         </figure>
