--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -5,6 +5,6 @@
 <!-- Favicon -->
 <link rel="icon" type="image/x-icon" href="favicons/computer_love.ico">
 <!-- Custom fonts -->
-<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Droid+Serif:400,700,400italic,700italic|Roboto+Slab:400,100,300,700|Raleway:300" rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Arimo" rel='stylesheet' type='text/css'>
 <!-- Custom CSS -->
 <link rel="stylesheet" type="text/css" href="/css/style.css">
