--- a/static/css/style.css
+++ b/static/css/style.css
@@ -105,7 +105,7 @@ h2::before {
   pointer-events: none;
 }
 
-p {
+p, span, a {
   font-weight: 200;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 1.25rem;
