Fix failing fonts in some browsers

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -6,28 +6,28 @@
   <div class="social-media-links">
     <!-- Email -->
     <a class="social-media-link" href="mailto:aklaporte@gmail.com" title="E-mail">
-      <div>
+      <div class="social-media-container">
         <i class="fas fa-envelope fa-2x"></i>
         <span>Email</span>
       </div>
     </a>
     <!-- GitHub -->
     <a class="social-media-link" href="https://github.com/aklap" title="GitHub">
-      <div>
+      <div class="social-media-container">
         <i class="fab fa-github fa-2x"></i>
         <span>GitHub</span>
       </div>
     </a>
     <!-- LinkedIn -->
     <a class="social-media-link" href="https://linkedin.com/in/alexislaporte" title="LinkedIn">
-      <div>
+      <div class="social-media-container">
         <i class="fab fa-linkedin fa-2x"></i>
         <span>LinkedIn</span>
       </div>
     </a>
     <!-- Mastodon -->
     <a class="social-media-link" href="https://techhub.social/@alexislp" title="Mastodon">
-      <div>
+      <div class="social-media-container">
         <i class="fab fa-mastodon fa-2x"></i>
         <span>Mastodon</span>
       </div>
