--- a/static/css/style.css
+++ b/static/css/style.css
@@ -157,6 +157,7 @@ nav {
 .menu-link a {
   color: white;
   text-decoration: none;
+  font-family: Montserrat;
 }
 
 @media (min-width: 650px) {
@@ -277,6 +278,7 @@ figcap span {
 }
 .project-title {
   color: black;
+  font-family: Montserrat;
 }
 .project-description {
   color: #2a2b2b;
@@ -338,6 +340,10 @@ figcap span {
   color: white;
   background-color: black;
   border: 1px solid grey;
+}
+.social-media-container span {
+  font-family: Montserrat;
+  font-size: 1rem;
 }
 /* MEDIA QUERY */
 @media (min-width: 650px) {
