--- a/static/css/style.css
+++ b/static/css/style.css
@@ -133,7 +133,7 @@ nav {
 .logo {
   color: white;
   font-family: "Montserrat";
-  font-size: 1rem;
+  font-size: 1.25rem;
   letter-spacing: 0.2em;
   text-decoration: none;
   text-transform: uppercase;
@@ -158,6 +158,7 @@ nav {
   color: white;
   text-decoration: none;
   font-family: Montserrat;
+  font-size: 1rem;
 }
 
 @media (min-width: 650px) {
@@ -172,6 +173,9 @@ nav {
   #mobile-logo {
     visibility: hidden;
     display: none;
+  }
+  .menu-link a {
+    font-size: 1.15rem;
   }
 }
 
