Remove text from footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" type="text/css" href="/css/style.css">
 
 <footer>
-  <p>Copyright Alexis&copy; {{ now.Format "2006"}} {{ or .Site.Params.Author }} - All Rights Reserved. &nbsp;
+  <p>Copyright&copy; {{ now.Format "2006"}} {{ or .Site.Params.Author }} - All Rights Reserved. &nbsp;
     <p id="attribution-info">Powered by <a href="https://gohugo.io" target="_blank">Hugo</a></p>
 </div>
 </footer>
