--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -16,7 +16,7 @@
       </div>
       <div class="text">
         <div class="intro-links">
-          <a href="#contact"><p>I'm currently looking for a new opportunities</p><br>
+          <a href="#contact"><p>I'm currently looking for new opportunities</p><br>
             <p><span class="emoji left">👉🏼</span> Get in touch! <span class="emoji right">👈🏼</span></p>
           </a> 
         </div>
