deploy: 405942edee4e8ffc33d8dde6146a0d671756571c

--- a/css/style.css
+++ b/css/style.css
@@ -47,11 +47,6 @@ table {
   border-spacing: 0;
 }
 /* END RESET */
-
-* {
-  /* border: 1px solid red; */
-}
-
 html, body {
   box-sizing: border-box;
   height: 100%;
@@ -224,7 +219,7 @@ nav {
   padding: 0.625rem 0;
 }
 /* MEDIA QUERIES */
-@media (min-width: 650px) {
+@media (min-width: 650px, orientation: portrait) {
   .reading-links {
     flex-direction: row;
   }
@@ -234,7 +229,23 @@ nav {
     margin: 0.5rem;
   }
 }
-
+@media (orientation: landscape) {
+  #about {
+    padding-top: 1rem;
+  }
+  #about h2 {
+    margin: 0;
+  }
+  p.reading-links {
+    margin: 0.5rem;
+    padding: 0.5rem;
+  }
+  span.spacer {
+    visibility: visible;
+    display: inline;
+    margin: .5rem;
+  }
+}
 /* PORTFOLIO */
 #portfolio {
   align-items: center;
